# psygine

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
demos/: 1_datasets.ipynb  2_paradigms.ipynb
demos/decoders/: admm_csnet.ipynb  espirit_demo.ipynb  fftmod.ipynb
demos/decoders/mri/: admm_csnet.ipynb  espirit_demo.ipynb
psygine/datasets/: base.py
psygine/datasets/eeg/: __init__.py  base.py  data_alex.py  data_bnci.py  data_moabb.py  data_nakanishi.py  data_physionet.py  data_tsinghua.py
psygine/datasets/image/: __init__.py  base.py  gopro.py  yalefaceb.py
psygine/datasets/misc/: __init__.py  traffic.py
psygine/datasets/movielens/: __init__.py  base.py  movielens.py
psygine/datasets/mr/: base.py
psygine/datasets/mri/: __init__.py  base.py  mridata.py  ocmr.py  otazo.py  yang2021.py
psygine/datasets/toy/: base.py  traffic.py
psygine/datasets/utils/: __init__.py  io.py  network.py
psygine/datasets/yaleface/: base.py  yalefaceb.py
psygine/decoders/eeg/decomp/: __init__.py  base.py  cca.py  rrr.py  tdca.py  trca.py
psygine/decoders/eeg/decomposition/: __init__.py  base.py  cca.py  csp.py  dsp.py  tdca.py  trca.py
psygine/decoders/eeg/manifold/: __init__.py  (+1 more)
psygine/decoders/mri/: __init__.py
psygine/decoders/utils/: __init__.py  covariance.py  cr.py  fourier.py  metrics.py  model_selection.py  operators.py  perf.py  proxmap.py  rpca.py  svd.py
psygine/paradigms/: __init__.py  base.py  eeg_paradigms.py
psygine/paradigms/utils/: hooks.py
tests/decoders/: test_espirit.py  test_fourier.py
tests/decoders/utils/: test_fourier.py
(+8 files in other folders)
